# pixel_polyphony_game

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml
api/: Dockerfile  pyproject.toml
api/core/: asgi.py  settings.py  urls.py  wsgi.py
api/game/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
api/game/migrations/: 0001_initial.py  0002_alter_player_instrument.py  0003_auto_20210528_0430.py  0004_alter_game_date_start.py  0005_alter_instrument_name.py  0006_auto_20210528_1721.py  0007_game_result.py  0008_auto_20210529_1947.py  0009_remove_hit_player.py  0010_auto_20210530_0621.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.css  App.js  App2.js  Game.css  Game.js  Home.js  Join.js  Lobby.css  Lobby.js  Route.js
proxy/: Dockerfile  conf
