[tool.poetry]
name = "django_api_starter"
version = "0.1.0"
description = ""
authors = ["Seba Derendarz <seba+git@derendarz.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.13.4"
gunicorn = "^20.1.0"
uvloop = "^0.15.2"
httptools = "^0.2.0"
Django = "^3.2.3"
psycopg2-binary = "^2.8.6"
django-extensions = "^3.1.3"
shortuuid = "^1.0.1"
djangorestframework = "^3.12.4"
channels = "^3.0.3"
djangochannelsrestframework = "^0.2.2"
channels-redis = "^3.2.0"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^21.4b2"
isort = "^5.8.0"
bandit = "^1.7.0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
